Fix instruction message on signup

--- a/app/www/states/login/signup.html
+++ b/app/www/states/login/signup.html
@@ -5,8 +5,7 @@
         <div class="item item-body">
             <div>
                 Para realizar seu cadastro, informe os dados abaixo clicando sobre o Pai ou Mãe.</br>
-                Não é necessário cadastrar Pai e Mãe,  você pode fazer apenas o seu cadastro.</br>
-                Posteriormente poderá pelo sistema informar os dados do outro.
+                Não é necessário cadastrar Pai e Mãe,  você pode fazer apenas o seu cadastro.
             </div>
         </div>
       </div>
